--- a/spring2023/lecture/lec06/main.tex
+++ b/spring2023/lecture/lec06/main.tex
@@ -114,8 +114,8 @@
         \item The cats that are raised by my sister \rule{1.5cm}{0.5mm} sleeping. \pause\hfill \textit{syntax}
         \item Jane is happy that John invited \rule{1.5cm}{0.5mm} friends to his birthday party. \pause\hfill \textit{coreference}
         \item \rule{1.5cm}{0.5mm} is the capital of Tanzania. \pause\hfill \textit{knowledge}
-        \item The boy is \rule{1.5cm}{0.5mm} because he lost his keys.  \pause\hfill \textit{coonsense}
-        \item John took 100 bucks to Vegas. He won 50 and then lost 100. Now he only has \rule{1.5cm}{0.5mm} to go home. \pause\hfill \textit{nuerical reasoning}
+        \item The boy is \rule{1.5cm}{0.5mm} because he lost his keys.  \pause\hfill \textit{commonsense}
+        \item John took 100 bucks to Vegas. He won 50 and then lost 100. Now he only has \rule{1.5cm}{0.5mm} to go home. \pause\hfill \textit{numerical reasoning}
     \end{itemize}
 
     \pause\bigskip
