--- a/fall2023/lecture/beamer-style.tex
+++ b/fall2023/lecture/beamer-style.tex
@@ -22,7 +22,7 @@
 \newcommand<>{\mgreen}[1]{{\color#2{green}#1}}
 \newcommand<>{\beamerblue}[1]{\textcolor#2{beamerblue}{#1}}
 \newcommand<>{\mbeamerblue}[1]{{\color#2{beamerblue}#1}}
-\newcommand{\mycite}[1]{{\color{brown} [#1]}}
+\newcommand{\mycite}[2][]{\href{#1}{\color{brown} #2}}
 %\newcommand{\green}[1]{\textcolor{ForestGreen}{#1}}
 %\newcommand{\red}[1]{\textcolor{red}{#1}}
 %\newcommand{\blue}[1]{\textcolor{blue}{#1}}
