--- a/fall2023/lecture/lec10/main.tex
+++ b/fall2023/lecture/lec10/main.tex
@@ -261,17 +261,7 @@
 
     (demo)
     \pdfnote{
-        Input: John Doe
-Output: The first letter of each word is J and D, therefore the answer is JD
-
-Input: Sandra Smith
-Output: The first letter of each word is S and S, therefore the answer is SS
-
-Input: Tim Lee
-Output: The first letter of each word is T and L, therefore the answer is TL
-
-Input: Abi Wang
-Output:  The first letter of each word is A and W
+        first letter of first and last name
     }
     \pdfnote{
         simpler CoT: e.g., A and W -> WA
